--- a/test.jade
+++ b/test.jade
@@ -1,9 +1,21 @@
-
+.container
+	ul.list-1
+		li.item-1
+			| I am a list item
+		li.item-2
+	ul.list-2
+		li.item-1
+		li.item-2
 
 
 .container
 	ul.list-1
 		li.item-1
-			| The first list item
+			color: green;
 		li.item-2
-		li.item-3
+	ul.list-2
+		li.item-1
+		li.item-2
+
+
+		
